Prevents zooming in on dobuble tap on mobile devices

--- a/style/style.css
+++ b/style/style.css
@@ -8,5 +8,5 @@
 .tile{
     height: 250px;
     width: 250px;
-
+    touch-action: manipulation;
 }
